<resources>
    <string name="app_name">Text Bridge</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="log_default_text">Log output will be displayed here.</string>
    <string name="sms_service_started">SMS Gateway service started...</string>
    <string name="sms_service_stopped">SMS Gateway service stopped.</string>
    <string name="loading_endpoint">Gateway Endpoint</string>
    <string name="copy_button_text">Copy</string>
</resources>
