<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Endpoint URL TextView -->
    <TextView
        android:id="@+id/endpointTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        android:background="#f0f0f0"
        android:text="@string/loading_endpoint"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <!-- Copy URL Button -->
    <Button
        android:id="@+id/copyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copy_button_text" />

    <!-- Start Button -->

    <!-- Stop Button -->

    <!-- Log TextView -->
    <TextView
        android:id="@+id/logTextView"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_marginTop="16dp"
        android:background="#f0f0f0"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="@string/log_default_text"
        android:textColor="#000000" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_button_text" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/stop_button_text" />

</LinearLayout>
